@@ -1,10 +1,0 @@
-""" Interfaces
-"""
-
-from zope.interface import Interface
-
-
-class ITemporalCoverageAdapter(Interface):
-    """ Marker interface for objects that will return temporalCoverage values
-    """
-
